--- a/pom.xml
+++ b/pom.xml
@@ -30,8 +30,8 @@
 				<artifactId>mule-maven-plugin</artifactId>
 				<version>${mule.maven.plugin.version}</version>
 				<extensions>true</extensions>
-				<configuration>
-				   <cloudHubDeployment>
+				  <configuration>
+				  <!-- <cloudHubDeployment>
 				      <uri>https://anypoint.mulesoft.com</uri>
 				      <muleVersion>${app.runtime}</muleVersion>
 				      <username>${username}</username>
@@ -42,7 +42,10 @@
 				      <workers>${workers}</workers>
 				      <workerType>${vCore}</workerType>	
 				      <objectStoreV2>true</objectStoreV2>			     
-				  </cloudHubDeployment>
+				  </cloudHubDeployment> -->
+				  <standaloneDeployment>
+                     <muleHome>${mule.home}</muleHome> 
+                 </standaloneDeployment>
 				</configuration>
 			</plugin>
 		</plugins>
